--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>International RAISE 2025 - Robotics and AI in Systems Engineering</title>
+    <title>International Summer School RAISE 2025 - Robotics and AI in Systems Engineering</title>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
@@ -366,9 +366,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#audience">Audience</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#pricing">Pricing</a>
-                    </li>
+
                     <li class="nav-item">
                         <a class="nav-link" href="#program">Program</a>
                     </li>
@@ -394,8 +392,8 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-8 text-white hero-content mx-auto text-center">
-                <h1 class="mb-3">International RAISE 2025</h1>
-                <p class="lead mb-4">Robotics and Artificial Intelligence in Systems Engineering</p>
+                <h1 class="mb-3">RAISE 2025</h1>
+                <p class="lead mb-4">International Summer School on Robotics and Artificial Intelligence in Systems Engineering</p>
                 <div class="d-flex justify-content-center flex-wrap gap-4 mb-4">
                     <div class="stats-item text-white bg-opacity-10">
                         <div><i class="fas fa-calendar-alt me-2"></i> 14-16 July 2025</div>
@@ -406,13 +404,13 @@
                 </div>
 
                 <!-- Register Button -->
-                <a href="#register" class="btn btn-lg px-4 py-2 mt-3" 
+                <a href="https://forms.gle/yDLEFRtugrhM3dzE9" target="_blank" class="btn btn-lg px-4 py-2 mt-3" 
                    style="background: linear-gradient(135deg, var(--primary-color), var(--secondary-color)); color: white; border: none;">
                     <i class="fas fa-ticket me-2"></i> Register Now
                 </a>
 
                 <!-- Download Call Button -->
-                <a href="CALL_RAISE 2025.pdf" target="_blank" class="btn btn-lg px-4 py-2 mt-3 ms-2"
+                <a href="CALL_RAISE2025.pdf" target="_blank" class="btn btn-lg px-4 py-2 mt-3 ms-2"
                    style="background-color: rgba(255, 255, 255, 0.2); color: white; border: 1px solid white;">
                     <i class="fas fa-file-pdf me-2"></i> Download Call PDF
                 </a>
@@ -425,13 +423,14 @@
 
 
 
+
     <!-- Overview Section -->
     <section class="py-5" id="overview">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-10">
                     <h2 class="section-title mb-4">Summer School Overview</h2>
-                    <p class="lead mb-4">The International RAISE 2025 is an intensive three-day summer school focused on cutting-edge robotics and artificial intelligence technologies in systems engineering. The program combines theoretical knowledge with hands-on workshops and a competitive challenge.</p>
+                    <p class="lead mb-4">The International Summer School RAISE 2025 is an intensive three-day summer school focused on cutting-edge robotics and artificial intelligence technologies in systems engineering. The program combines theoretical knowledge with hands-on workshops and a competitive challenge.</p>
 
                     <div class="row g-4 mt-3">
                         <div class="col-md-4">
@@ -610,7 +609,7 @@
 
                         <div class="schedule-item">
                             <div class="schedule-time">09:30 – 12:30</div>
-                            <h5>International RAISE Competition</h5>
+                            <h5>International Summer School RAISE Competition</h5>
                             <p class="mb-0">Teams compete in different robotics tracks</p>
                         </div>
 
@@ -636,8 +635,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-10">
-                <h2 class="section-title mb-4">International RAISE Competition</h2>
-                <p class="lead mb-5">The international RAISE 2025 competition aims to foster innovation and practical skills in robotics and AI. Teams will compete in three different tracks with attractive prizes for winners.</p>
+                <h2 class="section-title mb-4">International Summer School RAISE Competition</h2>
+                <p class="lead mb-5">The International Summer School RAISE 2025 competition aims to foster innovation and practical skills in robotics and AI. Teams will compete in three different tracks with attractive prizes for winners.</p>
 
                 <div class="track-card">
                     <h4><i class="fas fa-robot text-primary me-2"></i> Track 1: Autonomous Robot</h4>
@@ -658,7 +657,7 @@
                     <div class="card-body">
                         <h4 class="card-title"><i class="fas fa-award text-warning me-2"></i> Rewards</h4>
                         <ul class="list-unstyled mb-4">
-                            <li class="mb-3"><i class="fas fa-check-circle text-success me-2"></i> Monetary prizes for each track winner</li>
+                            <li class="mb-3"><i class="fas fa-check-circle text-success me-2"></i> Prizes for each track winner</li>
                             <li class="mb-3"><i class="fas fa-check-circle text-success me-2"></i> Potential industrial partnerships for real-world implementation</li>
                             <li class="mb-3"><i class="fas fa-check-circle text-success me-2"></i> Recognition certificates for all finalists</li>
                         </ul>
@@ -880,8 +879,8 @@
 <!-- Register Section -->
 <section class="py-5" id="register">
     <div class="container text-center">
-        <h2 class="mb-4">Register for the international RAISE 2025</h2>
-        <p class="lead mb-4">Secure your spot for the International RAISE 2025 event by completing the registration form below.</p>
+        <h2 class="mb-4">Register for the International Summer School RAISE 2025</h2>
+        <p class="lead mb-4">Secure your spot for the International Summer School RAISE 2025 event by completing the registration form below.</p>
         <a href="https://forms.gle/yDLEFRtugrhM3dzE9" target="_blank" class="btn btn-lg px-4 py-2" style="background: linear-gradient(135deg, var(--primary-color), var(--secondary-color)); color: white;">
             <i class="fas fa-edit me-2"></i> Fill Registration Form
         </a>
@@ -905,7 +904,7 @@
                                     <ul class="list-unstyled contact-list">
                                         <li class="contact-item">
                                             <i class="fas fa-envelope text-primary me-2"></i>
-                                            <a href="mailto:raise2025@enetcom.usf.tn">raise2025@enetcom.usf.tn</a>
+                                            <a href="mailto:raise2025@enetcom.usf.tn">raise2025@gmail.com</a>
                                         </li>
                                         <li class="contact-item">
                                             <i class="fas fa-phone text-primary me-2"></i>
@@ -920,7 +919,7 @@
                             <div class="card h-100">
                                 <div class="card-body">
                                     <h4 class="card-title mb-4"><i class="fas fa-handshake text-success me-2"></i> Sponsorship Opportunities</h4>
-                                    <p class="mb-3">Interested in supporting the international RAISE 2025 event and gaining visibility for your organization?</p>
+                                    <p class="mb-3">Interested in supporting the International Summer School RAISE 2025 event and gaining visibility for your organization?</p>
                                     <ul class="list-unstyled mb-4">
                                         <li class="mb-2"><i class="fas fa-check-circle text-success me-2"></i> Brand visibility among robotics and AI experts</li>
                                         <li class="mb-2"><i class="fas fa-check-circle text-success me-2"></i> Access to talented participants and researchers</li>
@@ -949,7 +948,7 @@
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <h4 class="mb-3">Contact</h4>
-                    <p><i class="fas fa-envelope me-2"></i> raise2025@enetcom.usf.tn</p>
+                    <p><i class="fas fa-envelope me-2"></i> raise2025@gmail.com</p>
                     <p class="mb-0"><i class="fas fa-phone me-2"></i> +216 98 290 354</p>
                 </div>
                 <div class="col-12 text-center mt-4">
