--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                 </a>
 
                 <!-- Download Call Button -->
-                <a href="CALL_RAISE2025.pdf" target="_blank" class="btn btn-lg px-4 py-2 mt-3 ms-2"
+                <a href="https://raiseschool.github.io/RAISE2025//CALL_RAISE2025.pdf" target="_blank" class="btn btn-lg px-4 py-2 mt-3 ms-2"
                    style="background-color: rgba(255, 255, 255, 0.2); color: white; border: 1px solid white;">
                     <i class="fas fa-file-pdf me-2"></i> Download Call PDF
                 </a>
