--- a/index.html
+++ b/index.html
@@ -397,7 +397,9 @@
         <div class="row align-items-center">
             <div class="col-lg-8 text-white hero-content mx-auto text-center">
                 <h1 class="mb-3">RAISE 2025</h1>
-                <p class="lead mb-4">International Summer School on Robotics and Artificial Intelligence in Systems Engineering</p>
+                <p class="lead mb-2">International Summer School on</p>
+                <p class="lead mb-4">Robotics and Artificial Intelligence in Systems Engineering</p>
+
                 <div class="d-flex justify-content-center flex-wrap gap-4 mb-4">
                     <div class="stats-item text-white bg-opacity-10">
                         <div><i class="fas fa-calendar-alt me-2"></i> 14-16 July 2025</div>
