--- a/index.html
+++ b/index.html
@@ -936,7 +936,7 @@
                                     <ul class="list-unstyled contact-list">
                                         <li class="contact-item">
                                             <i class="fas fa-envelope text-primary me-2"></i>
-                                            <a href="mailto:raise2025@enetcom.usf.tn">raise2025@gmail.com</a>
+                                            <a href="mailto:raise2025@gmail.com">raise2025@gmail.com</a>
                                         </li>
                                         <li class="contact-item">
                                             <i class="fas fa-phone text-primary me-2"></i>
@@ -957,7 +957,7 @@
                                         <li class="mb-2"><i class="fas fa-check-circle text-success me-2"></i> Access to talented participants and researchers</li>
                                         <li class="mb-2"><i class="fas fa-check-circle text-success me-2"></i> Product demonstration opportunities</li>
                                     </ul>
-                                    <a href="mailto:sponsors.raise2025@enetcom.usf.tn" class="btn" style="background-color: var(--secondary-color); color: white;">
+                                    <a href="mailto:raise2025@gmail.com" class="btn" style="background-color: var(--secondary-color); color: white;">
                                         <i class="fas fa-envelope me-2"></i> Contact Sponsorship Team
                                     </a>
                                 </div>
