--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
                         </div>
 
                         <div class="schedule-item">
-                            <div class="schedule-time">13:30 – 17:00</div>
+                            <div class="schedule-time">14:00 – 17:00</div>
                             <h5>Hands-on Workshops</h5>
                             <p class="mb-0">Practical implementation of ROS concepts with real robots</p>
                         </div>
@@ -620,7 +620,7 @@
                         </div>
                     
                         <div class="schedule-item">
-                            <div class="schedule-time">13:30 – 15:30</div>
+                            <div class="schedule-time">09:30 – 12:30</div>
                             <h5>Parallel Sessions</h5>
                             <p class="mb-0">
                                 <strong>Track A:</strong> Industrial & Poster Sessions – Presentations from industry partners and poster exhibitions<br>
@@ -652,7 +652,7 @@
 <section class="py-5" id="register">
     <div class="container text-center">
         <h2 class="mb-4">Register for the RAISE 2025 School Now </h2>
-        <p class="lead mb-4">Secure your spot for the International Summer School RAISE 2025 event by completing the registration form below.</p>
+        <p class="lead mb-4">Secure your spot for the International Summer School RAISE 2025 event by completing the registration form below before June 15 2025.</p>
         <a href="https://forms.gle/yDLEFRtugrhM3dzE9" target="_blank" class="btn btn-lg px-4 py-2" style="background: linear-gradient(135deg, var(--primary-color), var(--secondary-color)); color: white;">
             <i class="fas fa-edit me-2"></i> Fill Registration Form
         </a>
