--- a/index.html
+++ b/index.html
@@ -921,74 +921,90 @@
 
 
     <!-- Contact Section -->
-    <section class="py-5" id="contact">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-10">
-                    <h2 class="section-title mb-4">Contact Us</h2>
-
-                    <div class="row g-4">
-                        <div class="col-md-6">
-                            <div class="card h-100">
-                                <div class="card-body">
-                                    <h4 class="card-title mb-4"><i class="fas fa-envelope-open-text text-primary me-2"></i> General Inquiries</h4>
-                                    <p class="mb-3">For questions regarding registration, accommodations, or general information:</p>
-                                    <ul class="list-unstyled contact-list">
-                                        <li class="contact-item">
-                                            <i class="fas fa-envelope text-primary me-2"></i>
-                                            <a href="mailto:raiseschool2025@gmail.com">raiseschool2025@gmail.com</a>
-                                        </li>
-                                        <li class="contact-item">
-                                            <i class="fas fa-phone text-primary me-2"></i>
-                                            <a href="tel:+216 72 347 854">+216 98 290 354</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-md-6">
-                            <div class="card h-100">
-                                <div class="card-body">
-                                    <h4 class="card-title mb-4"><i class="fas fa-handshake text-success me-2"></i> Sponsorship Opportunities</h4>
-                                    <p class="mb-3">Interested in supporting the International Summer School RAISE 2025 event and gaining visibility for your organization?</p>
-                                    <ul class="list-unstyled mb-4">
-                                        <li class="mb-2"><i class="fas fa-check-circle text-success me-2"></i> Brand visibility among robotics and AI experts</li>
-                                        <li class="mb-2"><i class="fas fa-check-circle text-success me-2"></i> Access to talented participants and researchers</li>
-                                        <li class="mb-2"><i class="fas fa-check-circle text-success me-2"></i> Product demonstration opportunities</li>
-                                    </ul>
-                                    <a href="mailto:raiseschool2025@gmail.com" class="btn" style="background-color: var(--secondary-color); color: white;">
-                                        <i class="fas fa-envelope me-2"></i> Contact Sponsorship Team
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+<section class="py-5" id="contact">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-10">
+          <h2 class="section-title mb-4">Contact Us</h2>
+          <div class="row g-4">
+  
+            <!-- General Inquiries -->
+            <div class="col-md-6">
+              <div class="card h-100">
+                <div class="card-body">
+                  <h4 class="card-title mb-4">
+                    <i class="fas fa-envelope-open-text text-primary me-2"></i> General Inquiries
+                  </h4>
+                  <p class="mb-3">For questions regarding registration, accommodations, or general information:</p>
+                  <ul class="list-unstyled contact-list">
+                    <li class="contact-item">
+                      <i class="fas fa-envelope text-primary me-2"></i>
+                      <a href="https://mail.google.com/mail/?view=cm&to=raise2025@gmail.com" target="_blank">
+                        raise2025@gmail.com
+                      </a>
+                    </li>
+                    <li class="contact-item">
+                      <i class="fas fa-phone text-primary me-2"></i>
+                      <a href="tel:+21698290354">+216 98 290 354</a>
+                    </li>
+                  </ul>
                 </div>
+              </div>
             </div>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="text-white">
-        <div class="container">
-            <div class="row g-4">
-                <div class="col-md-6 text-center text-md-start">
-                    <h4 class="mb-3">RAISE 2025</h4>
-                    <p>Robotics and Artificial Intelligence in Systems Engineering</p>
-                    <p class="mb-0">July 14-16, 2025 | Centre de recherche Sfax, Tunisia</p>
+  
+            <!-- Sponsorship -->
+            <div class="col-md-6">
+              <div class="card h-100">
+                <div class="card-body">
+                  <h4 class="card-title mb-4">
+                    <i class="fas fa-handshake text-success me-2"></i> Sponsorship Opportunities
+                  </h4>
+                  <p class="mb-3">
+                    Interested in supporting the International Summer School RAISE 2025 and gaining visibility for your organization?
+                  </p>
+                  <ul class="list-unstyled mb-4">
+                    <li class="mb-2"><i class="fas fa-check-circle text-success me-2"></i> Brand visibility among robotics and AI experts</li>
+                    <li class="mb-2"><i class="fas fa-check-circle text-success me-2"></i> Access to talented participants and researchers</li>
+                    <li class="mb-2"><i class="fas fa-check-circle text-success me-2"></i> Product demonstration opportunities</li>
+                  </ul>
+                  <a href="https://mail.google.com/mail/?view=cm&to=raise2025@gmail.com" target="_blank" class="btn" style="background-color: var(--secondary-color); color: white;">
+                    <i class="fas fa-envelope me-2"></i> Contact Sponsorship Team
+                  </a>
                 </div>
-                <div class="col-md-6 text-center text-md-end">
-                    <h4 class="mb-3">Contact</h4>
-                    <p><i class="fas fa-envelope me-2"></i> raiseschool2025@gmail.com</p>
-                    <p class="mb-0"><i class="fas fa-phone me-2"></i> +216 98 290 354</p>
-                </div>
-                <div class="col-12 text-center mt-4">
-                    <p class="mb-0">&copy; 2025 RAISE Summer School. All rights reserved.</p>
-                </div>
+              </div>
             </div>
+  
+          </div>
         </div>
-    </footer>
+      </div>
+    </div>
+  </section>
+<!-- Footer -->
+<footer class="text-white">
+    <div class="container">
+      <div class="row g-4">
+        <div class="col-md-6 text-center text-md-start">
+          <h4 class="mb-3">RAISE 2025</h4>
+          <p>Robotics and Artificial Intelligence in Systems Engineering</p>
+          <p class="mb-0">July 14-16, 2025 | Centre de recherche Sfax, Tunisia</p>
+        </div>
+        <div class="col-md-6 text-center text-md-end">
+          <h4 class="mb-3">Contact</h4>
+          <p>
+            <i class="fas fa-envelope me-2"></i>
+            <a href="https://mail.google.com/mail/?view=cm&to=raise2025@gmail.com" target="_blank" style="color: white;">
+              raise2025@gmail.com
+            </a>
+          </p>
+          <p class="mb-0"><i class="fas fa-phone me-2"></i> +216 98 290 354</p>
+        </div>
+        <div class="col-12 text-center mt-4">
+          <p class="mb-0">&copy; 2025 RAISE Summer School. All rights reserved.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+    
 
  
 
